新增部落格頁架構跟footer部分

--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>團體任務-個人品牌網站(部落格)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- 表頭 -->
+    <header></header>
+    <!-- 大圖看板 -->
+    <section></section>
+    <!-- 最新文章 -->
+    <section></section>
+    <!-- 文章列表 -->
+    <section></section>
+    <!-- 聯絡資訊 -->
+    <section></section>
+    <!-- 表尾 -->
+    <footer>© 2025 Alyse Wang. All rights reserved.</footer>
+    
     <script src="script.js"></script>
 </body>
 </html>
