--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     <title>團體任務-個人品牌網站(部落格)</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <!-- 表頭 -->
     <header></header>
@@ -17,128 +15,12 @@
     <!-- 最新文章 -->
     <section></section>
     <!-- 文章列表 -->
-    <section class="content">
-        <div class="card">
-            <img src="img/desktop/blog/photo4.png" alt="react">
-            <br><small>2024/10/11</small>
-            <h3>#React #入門基礎</h3>
-            <h2>React 入門不再迷惘：三步驟帶你上手核心概念</h2>
-            <p>
-                你是否對 React 感到好奇，卻苦惱於該如何正式啟動學習之路？身為前端工程師兼職涯諮詢師，我常遇到同學問我：「React
-                到底該怎麼入門？」為了幫大家減少摸索的時間，我整理出三個循序漸進的關鍵步驟，帶你更輕鬆地掌握
-                React 核心概念，真正把理論應用在實際專案中。
-            </p>
-            <button type="button">閱讀內文</button>
-        </div>
-        <div class="card">
-            <img src="img/desktop/blog/photo1.png" alt="作品集">
-            <br><small>2024/09/07</small>
-            <h3>#作品集 #求職攻略</h3>
-            <h2>前端作品集打造指南：讓你的專案成為履歷亮點</h2>
-            <p>
-                對正在求職的前端工程師而言，作品集往往是第一個「說話」的利器。當面試官瀏覽你的網頁作品時，能夠快速了解你的程式邏輯、設計感以及解決問題的思路。我在協助多位同學優化履歷與作品集的過程中，總結出一些關鍵要素，分享給正在打造、升級作品集的你。
-            </p>
-            <button type="button">閱讀內文</button>
-        </div>
-        <div class="card">
-            <img src="img/desktop/blog/photo2.png" alt="CSS">
-            <br><small>2024/09/07</small>
-            <h3>#作品集 #求職攻略</h3>
-            <h2>前端作品集打造指南：讓你的專案成為履歷亮點</h2>
-            <p>
-                對正在求職的前端工程師而言，作品集往往是第一個「說話」的利器。當面試官瀏覽你的網頁作品時，能夠快速了解你的程式邏輯、設計感以及解決問題的思路。我在協助多位同學優化履歷與作品集的過程中，總結出一些關鍵要素，分享給正在打造、升級作品集的你。
-            </p>
-            <button type="button">閱讀內文</button>
-        </div>
-        <div class="card">
-            <img src="img/desktop/blog/photo6.png" alt="學習心法">
-            <br><small>2024/09/07</small>
-            <h3>#作品集 #求職攻略</h3>
-            <h2>前端作品集打造指南：讓你的專案成為履歷亮點</h2>
-            <p>
-                對正在求職的前端工程師而言，作品集往往是第一個「說話」的利器。當面試官瀏覽你的網頁作品時，能夠快速了解你的程式邏輯、設計感以及解決問題的思路。我在協助多位同學優化履歷與作品集的過程中，總結出一些關鍵要素，分享給正在打造、升級作品集的你。
-            </p>
-            <button type="button">閱讀內文</button>
-        </div>
-        <div class="card">
-            <img src="img/desktop/blog/photo3.png" alt="面試準備">
-            <br><small>2024/09/07</small>
-            <h3>#作品集 #求職攻略</h3>
-            <h2>前端作品集打造指南：讓你的專案成為履歷亮點</h2>
-            <p>
-                對正在求職的前端工程師而言，作品集往往是第一個「說話」的利器。當面試官瀏覽你的網頁作品時，能夠快速了解你的程式邏輯、設計感以及解決問題的思路。我在協助多位同學優化履歷與作品集的過程中，總結出一些關鍵要素，分享給正在打造、升級作品集的你。
-            </p>
-            <button type="button">閱讀內文</button>
-        </div>
-        <div class="card">
-            <img src="img/desktop/blog/photo5.png" alt="vue">
-            <br><small>2024/10/11</small>
-            <h3>#React #入門基礎</h3>
-            <h2>React 入門不再迷惘：三步驟帶你上手核心概念</h2>
-            <p>
-                你是否對 React 感到好奇，卻苦惱於該如何正式啟動學習之路？身為前端工程師兼職涯諮詢師，我常遇到同學問我：「React
-                到底該怎麼入門？」為了幫大家減少摸索的時間，我整理出三個循序漸進的關鍵步驟，帶你更輕鬆地掌握
-                React 核心概念，真正把理論應用在實際專案中。
-            </p>
-            <button type="button">閱讀內文</button>
-        </div>
-        <div class="card">
-            <img src="img/desktop/blog/photo9.png" alt="git">
-            <br><small>2024/09/07</small>
-            <h3>#作品集 #求職攻略</h3>
-            <h2>前端作品集打造指南：讓你的專案成為履歷亮點</h2>
-            <p>
-                對正在求職的前端工程師而言，作品集往往是第一個「說話」的利器。當面試官瀏覽你的網頁作品時，能夠快速了解你的程式邏輯、設計感以及解決問題的思路。我在協助多位同學優化履歷與作品集的過程中，總結出一些關鍵要素，分享給正在打造、升級作品集的你。
-            </p>
-            <button type="button">閱讀內文</button>
-        </div>
-        <div class="card">
-            <img src="img/desktop/blog/photo7.png" alt="seo">
-            <br><small>2024/09/07</small>
-            <h3>#作品集 #求職攻略</h3>
-            <h2>前端作品集打造指南：讓你的專案成為履歷亮點</h2>
-            <p>
-                對正在求職的前端工程師而言，作品集往往是第一個「說話」的利器。當面試官瀏覽你的網頁作品時，能夠快速了解你的程式邏輯、設計感以及解決問題的思路。我在協助多位同學優化履歷與作品集的過程中，總結出一些關鍵要素，分享給正在打造、升級作品集的你。
-            </p>
-            <button type="button">閱讀內文</button>
-        </div>
-        <div class="card">
-            <img src="img/desktop/blog/photo8.png" alt="自動化">
-            <br><small>2024/09/07</small>
-            <h3>#作品集 #求職攻略</h3>
-            <h2>前端作品集打造指南：讓你的專案成為履歷亮點</h2>
-            <p>
-                對正在求職的前端工程師而言，作品集往往是第一個「說話」的利器。當面試官瀏覽你的網頁作品時，能夠快速了解你的程式邏輯、設計感以及解決問題的思路。我在協助多位同學優化履歷與作品集的過程中，總結出一些關鍵要素，分享給正在打造、升級作品集的你。
-            </p>
-            <button type="button">閱讀內文</button>
-        </div>
-        <div class="card">
-            <img src="img/desktop/blog/photo11.png" alt="typeScript">
-            <br><small>2024/09/07</small>
-            <h3>#作品集 #求職攻略</h3>
-            <h2>前端作品集打造指南：讓你的專案成為履歷亮點</h2>
-            <p>
-                對正在求職的前端工程師而言，作品集往往是第一個「說話」的利器。當面試官瀏覽你的網頁作品時，能夠快速了解你的程式邏輯、設計感以及解決問題的思路。我在協助多位同學優化履歷與作品集的過程中，總結出一些關鍵要素，分享給正在打造、升級作品集的你。
-            </p>
-            <button type="button">閱讀內文</button>
-        </div>
-        <div class="card">
-            <img src="img/desktop/blog/photo10.png" alt="test">
-            <br><small>2024/09/07</small>
-            <h3>#作品集 #求職攻略</h3>
-            <h2>前端作品集打造指南：讓你的專案成為履歷亮點</h2>
-            <p>
-                對正在求職的前端工程師而言，作品集往往是第一個「說話」的利器。當面試官瀏覽你的網頁作品時，能夠快速了解你的程式邏輯、設計感以及解決問題的思路。我在協助多位同學優化履歷與作品集的過程中，總結出一些關鍵要素，分享給正在打造、升級作品集的你。
-            </p>
-            <button type="button">閱讀內文</button>
-        </div>
-    </section>
+    <section></section>
     <!-- 聯絡資訊 -->
     <section></section>
     <!-- 表尾 -->
     <footer>© 2025 Alyse Wang. All rights reserved.</footer>
-
+    
     <script src="script.js"></script>
 </body>
-
 </html>
